# Base-RAG-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  package-lock.json  prometheus.yml  pyproject.toml  requirements.txt
data/: .gitkeep
documents/: .gitkeep
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Chat.tsx  FileUpload.tsx  Sidebar.tsx
frontend/src/components/ui/: index.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useRag.ts
frontend/src/types/: api.ts
frontend/src/utils/: cn.ts
logs/: .gitkeep
src/: __init__.py  build_index.py  cache.py  config.py  dependencies.py  eval_run.py  exceptions.py  ingest.py  logging_config.py  metrics.py  rag_chat.py  retry.py  server.py  ui_streamlit.py  validation.py
src/routes/: __init__.py  health.py  query.py  upload.py
tests/: __init__.py  conftest.py  test_cache.py  test_config.py  test_ingest.py  test_validation.py
